# jimp-exercises

lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  Palindrome.cpp  ReverseString.cpp  main.cpp
lab1/factorial/: Factorial.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: CMakeLists.txt  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.h  main.cpp
lab10/academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab5/xxx/: Xxx.cpp  Xxx.h  main.cpp
lab6/point/: Point.cpp  Point.h  main.cpp
lab6/wordcounter/: WordCounter.cpp  (+2 more)
lab7/: CMakeLists.txt
(+30 files in other folders)
